Fix compile error
Resolves `mvn compile` error
```
/src/main/java/uk/ac/man/library/oacpv2/service/SystemSyncAuto.java:[137,155] incompatible types: java.nio.charset.Charset cannot be converted to java.lang.String
```